--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -212,6 +212,10 @@
       display: inline-block;
 
       text-decoration: none;
+
+      & img {
+        margin-bottom: -40%;
+      }
     }
 
     &:hover > span {
