--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -214,7 +214,9 @@
       text-decoration: none;
 
       & img {
+        display: inline-block;
         margin-bottom: -40%;
+        height: 2rem;
       }
     }
 
